fixed gap between card and project

--- a/frontend/src/components/Dashboard/AnalyticCards/Tracking/index.module.css
+++ b/frontend/src/components/Dashboard/AnalyticCards/Tracking/index.module.css
@@ -17,7 +17,7 @@
   display: flex !important;
   justify-content: space-around !important;
   align-items: center !important;
-  min-width: 170px !important;
+  min-width: 188px !important;
 }
 
 .metricBox {
